# b24api

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
api24/: api.py  api_test.py  entity.py  error.py  future.py  query.py  query_test.py  settings.py  type.py
b24api/: __init__.py  api.py  api_test.py  entity.py  error.py  http.py  httpc.py  query.py  query_test.py  settings.py  transport.py  type.py
