[build-system]
requires = [
    "setuptools>=41",
    "wheel",
    "setuptools-git-versioning>=2.0,<3"
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "b24api"
dynamic = ["version"]
description = "Bitrix24 API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fast-depends>=2.4.12",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "retry>=0.9.2",
]

[dependency-groups]
dev = [
    "pytest-env>=1.1.5",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.14.0",
    "setuptools>=80.9.0",
    "setuptools-git-versioning>=2.1.0",
    "wheel>=0.45.1",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["EM", "TRY003", "D1", "FA"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
no-lines-before = ["standard-library"]
known-third-party = []

[tool.ruff.lint.extend-per-file-ignores]
"*_test.py" = ["S101", "S311"]


[tool.mypy]
strict = true


[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true

[tool.pytest_env]
BITRIX24_API_WEBHOOK_URL = "https://bitrix24.com/rest/0/test/"


[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
